--- a/assets/main.scss
+++ b/assets/main.scss
@@ -78,5 +78,5 @@ table th {
 
 p.hangingindent {
   padding-left:50px; // block indentation
-  text-indent: -20; // reduces indentation of first line
+  text-indent: -20px; // reduces indentation of first line
 }
