--- a/assets/main.scss
+++ b/assets/main.scss
@@ -77,7 +77,7 @@ table th {
 // Remove extra space after paragraph
 
 p.spaceremoval {
-  padding-bottom: -50px;
+  margin-bottom: 0px;
 }
 
 // Hanging indentation for citations
