--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,6 +30,10 @@ To add new links, follow the example below and activate it it by removing the co
         <li class="nav-item">
           <a class="nav-link" href="{{"/cv" | relative_url }}">CV</a>
         </li>
+        <!-- link for "Contact" page -->
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
+        </li>
 <!--
 This is the code to create a link in the Navigation Bar. Use hyphens instead of spaces between words in href
 = (e.g., my-adventures). Use only lower-case letters so that users can easily find your page in a web search without running into case-sensitive text problems. Replace "link text" with the name of the page as you want it to appear in the Navigation Bar.
